Update index.html (ìcones)

--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
         <button id="config-button" type="button"
             class="inline-flex items-center justify-center rounded-full p-2 border border-gray-300 text-gray-600 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-500"
             title="Configurações">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"
-                aria-hidden="true">
-                <path
-                    d="M11.983 1.447a1 1 0 00-1.966 0l-.253 1.518a5.53 5.53 0 00-1.363.79L6.02 3.18a1 1 0 00-1.32.083L3.263 4.7a1 1 0 00.083 1.32l1.575 1.381a5.55 5.55 0 000 1.598L3.346 10.38a1 1 0 00-.083 1.32l1.437 1.437a1 1 0 001.32.083l1.381-1.575c.43.27.89.49 1.363.79l.253 1.518a1 1 0 001.966 0l.253-1.518a5.53 5.53 0 001.363-.79l1.381 1.575a1 1 0 001.32-.083l1.437-1.437a1 1 0 00-.083-1.32l-1.575-1.381c.06-.53.06-1.068 0-1.598l1.575-1.381a1 1 0 00.083-1.32L16.02 3.18a1 1 0 00-1.32-.083l-1.381 1.575a5.53 5.53 0 00-1.363-.79l-.253-1.518zM10 8a2 2 0 110 4 2 2 0 010-4z" />
-            </svg>
-        </button>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm70-80h79l14-106q31-8 57.5-23.5T639-327l99 41 39-68-86-65q5-14 7-29.5t2-31.5q0-16-2-31.5t-7-29.5l86-65-39-68-99 42q-22-23-48.5-38.5T533-694l-13-106h-79l-14 106q-31 8-57.5 23.5T321-633l-99-41-39 68 86 64q-5 15-7 30t-2 32q0 16 2 31t7 30l-86 65 39 68 99-42q22 23 48.5 38.5T427-266l13 106Zm42-180q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Zm-2-140Z"/></svg>
     </div>
     <div class="text-center border-t border-b border-gray-400 py-1 mt-2">
         <p id="inst-nome" class="text-sm font-semibold text-gray-700">
@@ -257,7 +252,7 @@
             <p id="footer-email">E-mail: gaecoitajai@mpsc.mp.br</p>
         </div>
         <div class="flex items-center space-x-2">
-            <img id="footer-logo" src="imagem/gaeco2.bmp" alt="Logos" class="h-10">
+            <img id="footer-logo" src="imagem/logos.png" alt="Logos" class="h-10">
         </div>
     </div>
 </footer>
@@ -271,11 +266,7 @@
             class="inline-flex items-center justify-center rounded-full p-2 border border-teal-600 text-teal-600 hover:bg-teal-50 focus:outline-none focus:ring-2 focus:ring-teal-500"
             title="Salvar vistoria">
             <!-- Ícone de disquete / save -->
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"
-                aria-hidden="true">
-                <path
-                    d="M4 3a2 2 0 00-2 2v10c0 1.1.9 2 2 2h12a2 2 0 002-2V7.83a2 2 0 00-.59-1.41l-2.83-2.83A2 2 0 0013.17 3H4zm2 2h6v3H6V5zm3 5a3 3 0 100 6 3 3 0 000-6z" />
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#0e9a91"><path d="M840-680v480q0 33-23.5 56.5T760-120H200q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h480l160 160Zm-80 34L646-760H200v560h560v-446ZM480-240q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35ZM240-560h360v-160H240v160Zm-40-86v446-560 114Z"/></svg>
         </button>
 
         <!-- Botão listar vistorias salvas (apenas ícone) -->
@@ -283,10 +274,7 @@
             class="inline-flex items-center justify-center rounded-full p-2 border border-gray-500 text-gray-600 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-teal-500"
             title="Vistorias salvas">
             <!-- Ícone de lista -->
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"
-                aria-hidden="true">
-                <path d="M4 6h2v2H4V6zm0 4h2v2H4v-2zm0 4h2v2H4v-2zm4-8h8v2H8V6zm0 4h8v2H8v-2zm0 4h8v2H8v-2z" />
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#F19E39"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h168q13-36 43.5-58t68.5-22q38 0 68.5 22t43.5 58h168q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Zm80-80h280v-80H280v80Zm0-160h400v-80H280v80Zm0-160h400v-80H280v80Zm200-190q13 0 21.5-8.5T510-820q0-13-8.5-21.5T480-850q-13 0-21.5 8.5T450-820q0 13 8.5 21.5T480-790ZM200-200v-560 560Z"/></svg>
         </button>
     </div>
 
@@ -355,7 +343,7 @@
                     Logo do rodapé (caminho ou URL)
                 </label>
                 <input id="config-footer-logo" type="text" class="w-full p-2 border rounded-md text-sm"
-                    placeholder="Ex.: imagem/gaeco2.bmp">
+                    placeholder="Ex.: imagem/logos.png">
             </div>
             <div>
                 <label for="config-inst-nome" class="block text-sm font-semibold mb-1">
